--- a/ui/src/styling/map.css
+++ b/ui/src/styling/map.css
@@ -1,4 +1,5 @@
 .map {
-height: 350px;
-width: 100%;
+  border-radius: 10px;
+  height: calc(100% - 31px);
+  width: 100%;
 }
